--- a/Source/Laconic.Codingame.GameOfDrones/Laconic.Codingame.GameOfDrones.csproj
+++ b/Source/Laconic.Codingame.GameOfDrones/Laconic.Codingame.GameOfDrones.csproj
@@ -9,8 +9,9 @@
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>Laconic.Codingame.GameOfDrones</RootNamespace>
     <AssemblyName>Laconic.Codingame.GameOfDrones</AssemblyName>
-    <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.7</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
+    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <PlatformTarget>AnyCPU</PlatformTarget>
