--- a/Source/Laconic.Codingame.KirksQuestTheLabyrinth/Laconic.Codingame.KirksQuestTheLabyrinth.csproj
+++ b/Source/Laconic.Codingame.KirksQuestTheLabyrinth/Laconic.Codingame.KirksQuestTheLabyrinth.csproj
@@ -9,8 +9,9 @@
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>Laconic.Codingame.KirksQuestTheLabyrinth</RootNamespace>
     <AssemblyName>Laconic.Codingame.KirksQuestTheLabyrinth</AssemblyName>
-    <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.7</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
+    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <PlatformTarget>AnyCPU</PlatformTarget>
