--- a/Source/Laconic.Codingame/Laconic.Codingame.fsproj
+++ b/Source/Laconic.Codingame/Laconic.Codingame.fsproj
@@ -9,8 +9,7 @@
     <OutputType>Library</OutputType>
     <RootNamespace>Area52.Codingame</RootNamespace>
     <AssemblyName>Laconic.Codingame</AssemblyName>
-    <TargetFrameworkVersion>v4.7</TargetFrameworkVersion>
-    <TargetFSharpCoreVersion>4.4.1.0</TargetFSharpCoreVersion>
+    <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
     <Name>Laconic.Codingame</Name>
     <TargetFrameworkProfile />
@@ -34,24 +33,6 @@
     <WarningLevel>3</WarningLevel>
     <DocumentationFile>bin\Release\Area52.Codingame.XML</DocumentationFile>
   </PropertyGroup>
-  <ItemGroup>
-    <Reference Include="mscorlib" />
-    <Reference Include="FSharp.Core, Version=$(TargetFSharpCoreVersion), Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
-      <Private>True</Private>
-    </Reference>
-    <Reference Include="System" />
-    <Reference Include="System.Core" />
-    <Reference Include="System.Numerics" />
-  </ItemGroup>
-  <ItemGroup>
-    <Compile Include="AssemblyInfo.fs" />
-    <Compile Include="AsciiArt.fs" />
-    <Compile Include="ChuckNorris.fs" />
-    <Compile Include="HorseRacingDuels.fs" />
-    <Compile Include="SkynetTheChasm.fs" />
-    <Compile Include="Temperatures.fs" />
-    <Compile Include="PowerOfThor.fs" />
-  </ItemGroup>
   <PropertyGroup>
     <MinimumVisualStudioVersion Condition="'$(MinimumVisualStudioVersion)' == ''">11</MinimumVisualStudioVersion>
   </PropertyGroup>
@@ -68,6 +49,25 @@
     </Otherwise>
   </Choose>
   <Import Project="$(FSharpTargetsPath)" />
+  <ItemGroup>
+    <Compile Include="AssemblyInfo.fs" />
+    <Compile Include="AsciiArt.fs" />
+    <Compile Include="ChuckNorris.fs" />
+    <Compile Include="HorseRacingDuels.fs" />
+    <Compile Include="SkynetTheChasm.fs" />
+    <Compile Include="Temperatures.fs" />
+    <Compile Include="PowerOfThor.fs" />
+    <Content Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <Reference Include="FSharp.Core">
+      <HintPath>..\packages\FSharp.Core.4.5.2\lib\net45\FSharp.Core.dll</HintPath>
+    </Reference>
+    <Reference Include="mscorlib" />
+    <Reference Include="System" />
+    <Reference Include="System.Core" />
+    <Reference Include="System.Numerics" />
+  </ItemGroup>
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
   <Target Name="BeforeBuild">
