--- a/Source/Laconic.Codingame/Laconic.Codingame.fsproj
+++ b/Source/Laconic.Codingame/Laconic.Codingame.fsproj
@@ -58,6 +58,7 @@
     <Compile Include="Temperatures.fs" />
     <Compile Include="PowerOfThor.fs" />
     <Content Include="packages.config" />
+    <Compile Include="ThereIsNoSpoonEpisode1.fs" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="FSharp.Core">
