--- a/Source/Matrosov.Codingame/Matrosov.Codingame.fsproj
+++ b/Source/Matrosov.Codingame/Matrosov.Codingame.fsproj
@@ -55,7 +55,7 @@
     <Compile Include="AneoSponsoredPuzzle.fs" />
     <Compile Include="ChuckNorris.fs" />
     <Compile Include="GenomeSequencing.fs" />
-    <Compile Include="HorseRacingDuels.fs" />
+    <Compile Include="HorseRacingDuals.fs" />
     <Compile Include="PowerOfThor.fs" />
     <Compile Include="RollerCoaster.fs" />
     <Compile Include="SkynetTheChasm.fs" />
