--- a/Source/Matrosov.Codingame/Matrosov.Codingame.fsproj
+++ b/Source/Matrosov.Codingame/Matrosov.Codingame.fsproj
@@ -59,6 +59,7 @@
     <Compile Include="PowerOfThor.fs" />
     <Compile Include="RollerCoaster.fs" />
     <Compile Include="SkynetTheChasm.fs" />
+    <Compile Include="SkynetTheBridge.fs" />
     <Compile Include="TeadsSponsoredContest.fs" />
     <Compile Include="Temperatures.fs" />
     <Compile Include="ThereIsNoSpoonEpisode1.fs" />
