TanNetwork solution. Shitty implemention of Dijkstra algorithm on F# with mutable and suboptimal for the task data structures

--- a/Source/Matrosov.Codingame/Matrosov.Codingame.fsproj
+++ b/Source/Matrosov.Codingame/Matrosov.Codingame.fsproj
@@ -64,6 +64,7 @@
     <Compile Include="SkynetTheBridge.fs" />
     <Compile Include="SuperComputer.fs" />
     <Compile Include="Surface.fs" />
+    <Compile Include="TanNetwork.fs" />
     <Compile Include="TeadsSponsoredContest.fs" />
     <Compile Include="Temperatures.fs" />
     <Compile Include="ThereIsNoSpoonEpisode1.fs" />
