--- a/Source/Matrosov.Codingame.FSharp/Matrosov.Codingame.FSharp.fsproj
+++ b/Source/Matrosov.Codingame.FSharp/Matrosov.Codingame.FSharp.fsproj
@@ -8,10 +8,10 @@
     <ProjectGuid>a856e291-baf0-4634-8b5a-42e69316da17</ProjectGuid>
     <OutputType>Library</OutputType>
     <RootNamespace>Area52.Codingame</RootNamespace>
-    <AssemblyName>Matrosov.Codingame</AssemblyName>
+    <AssemblyName>Matrosov.Codingame.FSharp</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
-    <Name>Matrosov.Codingame</Name>
+    <Name>Matrosov.Codingame.FSharp</Name>
     <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
